--- a/games/fruit.html
+++ b/games/fruit.html
@@ -328,7 +328,7 @@
 <body>
 
     <div class="game-container">
-        <h1>Candy Crush</h1>
+        <h1>Fruit Crush</h1>
 
         <div class="scoreboard">
             <div class="scoreboard-item">
