--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                         </div>
                     </a>
 
-                    <a href="games/flappybird.html" class="game-card" data-category="puzzle">
-                        <div class="game-icon">🐦</div>
-                        <h3>Flappy bird</h3>
-                        <p>Navigate a bird through obstacles by tapping to keep it aloft.</p>
-                        <div class="game-categories">
-                            <span class="game-category puzzle">Arcade</span>
-                        </div>
-                    </a>
+                    <a href="games/flappybird.html" class="game-card" data-category="arcade">
+    <div class="game-icon">🐦</div>
+    <h3>Flappy Bird</h3>
+    <p>Navigate a bird through obstacles by tapping to keep it aloft.</p>
+    <div class="game-categories">
+        <span class="game-category arcade">Arcade</span>
+    </div>
+</a>
 
                     <a href="games/2048_responsive.html" class="game-card" data-category="puzzle">
                         <div class="game-icon">🔢</div>
@@ -140,7 +140,7 @@
                         </div>
                     </a>
 
-                    <a href="games/mine sweeper.html" class="game-card" data-category="puzzle">
+                    <a href="games/mine sweeper.html" class="game-card" data-category="puzzle strategy">
                         <div class="game-icon">💣</div>
                         <h3>mine sweeper</h3>
                         <p>Clear the minefield without detonating any mines.</p>
@@ -151,9 +151,9 @@
                         </div>
                     </a>
 
-                    <a href="games/pacman.html" class="game-card" data-category="puzzle">
+                    <a href="games/pacman.html" class="game-card" data-category="arcade classic">
                         <div class="game-icon">👻</div>
-                        <h3>pacman</h3>
+                        <h3>Pac-Man</h3>
                         <p>Navigate Pacman through a maze while eating dots and avoiding ghosts.</p>
                         <div class="game-categories">
                             <span class="game-category arcade">Arcade</span>
@@ -241,6 +241,7 @@
                         <p></p>
                         <div class="game-categories">
                             <span class="game-category arcade">Arcade</span>
+                            <span class="game-category puzzle">Puzzle</span>
                         </div>
                     </a>
 
