--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="mainHeader">
         <div class="logo">
             <div class="logo-icon">🎮</div>
-            <h1>GameHub</h1>
+            <h1>MGames</h1>
         </div>
         <nav>
             <a href="index.html" class="nav active">Home</a>
@@ -283,7 +283,7 @@
         <section id="about" class="about">
             <h2>About GameHub</h2>
             <p>
-                GameHub is a collection of fun, lightweight, and free-to-play browser games.
+                MGames is a collection of fun, lightweight, and free-to-play browser games.
                 We built this platform to bring quick entertainment to everyone — no downloads, no ads overload,
                 just pure gaming fun! Whether you're here for classic board games or fast-paced arcade challenges,
                 GameHub has something for you.
@@ -297,7 +297,7 @@
             <h2>Contact Us</h2>
             <p>Have feedback, game requests, or bug reports? Let us know!</p>
             <center>edineth506@gmail.com</center>
-            <p>© 2025 GameHub. All rights reserved.</p>
+            <p>© 2025 MGames. All rights reserved.</p>
 
             </form>
         </section>
