--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameHub - Mini Games Collection</title>
+    <title>MGames - Mini Games Collection</title>
     <link rel="stylesheet" href="styles/index.css">
 
 </head>
@@ -26,7 +26,7 @@
     <main>
         <div class="stage">
             <section class="hero">
-                <h1>Welcome to GameHub</h1>
+                <h1>Welcome to MGames</h1>
                 <p>Discover a collection of fun and engaging mini games. Challenge yourself and have fun!</p>
                 <button class="btn" onclick="scrollToGames()">Explore Games</button>
             </section>
