--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                     </a>
 
                     <a href="games/flappybird.html" class="game-card" data-category="arcade">
-    <div class="game-icon">🐦</div>
-    <h3>Flappy Bird</h3>
-    <p>Navigate a bird through obstacles by tapping to keep it aloft.</p>
-    <div class="game-categories">
-        <span class="game-category arcade">Arcade</span>
-    </div>
-</a>
+                        <div class="game-icon">🐦</div>
+                        <h3>Flappy Bird</h3>
+                        <p>Navigate a bird through obstacles by tapping to keep it aloft.</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
 
                     <a href="games/2048_responsive.html" class="game-card" data-category="puzzle">
                         <div class="game-icon">🔢</div>
@@ -184,6 +184,9 @@
 
                     <a href="games/typing_speed_game.html" class="game-card" data-category="arcade">
                         <div class="game-icon">⌨</div>
+                        <div class="platform-tags">
+                                <span class="platform-tag pc" title="Play on PC">💻</span>
+                            </div>
                         <h3>fast typing</h3>
                         <p>Test and improve your typing speed and accuracy.</p>
                         <div class="game-categories">
@@ -198,7 +201,6 @@
                             <div class="game-icon">👾</div>
                             <div class="platform-tags">
                                 <span class="platform-tag pc" title="Play on PC">💻</span>
-                                <span class="platform-tag mobile" title="Play on Mobile">📱</span>
                             </div>
                         </div>
                         <h3>spaceshooter v2</h3>
