--- a/index.html
+++ b/index.html
@@ -183,10 +183,12 @@
                     </a>
 
                     <a href="games/typing_speed_game.html" class="game-card" data-category="arcade">
-                        <div class="game-icon">⌨</div>
-                        <div class="platform-tags">
+                        <div class="game-header">
+                            <div class="game-icon">⌨</div>
+                            <div class="platform-tags">
                                 <span class="platform-tag pc" title="Play on PC">💻</span>
                             </div>
+                        </div>
                         <h3>fast typing</h3>
                         <p>Test and improve your typing speed and accuracy.</p>
                         <div class="game-categories">
