--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
                         </div>
                     </a>
 
+                    <a href="games/turborace.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🏎️</div>
+                        <h3>Turbo Racer</h3>
+                        <p>Avoid the oncoming cars and set a high score!</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
