--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -19,7 +19,7 @@
   <main>
     <h2>Privacy Policy</h2>
     <p>
-      At <strong>GameHub</strong>, we respect your privacy and are committed to protecting it.
+      At <strong>MGames</strong>, we respect your privacy and are committed to protecting it.
     </p>
 
     <h3>Information We Collect</h3>
@@ -36,8 +36,7 @@
 
     <h3>Contact Us</h3>
     <p>
-      If you have questions about this policy, contact us using this email <a
-        href="https://mail.google.com/mail/u/0/">edineth506@gmail.com</a>
+      If you have questions about this policy, <a href="../email.html">contact</a> us.
     </p>
 
     <p>Last updated:November 2025</p>
