--- a/index.html
+++ b/index.html
@@ -314,7 +314,12 @@
 
             </form>
         </section>
-        <a href="privacy/privacy.html" class="privacy-link">Privacy Policy</a>
+        <section>
+            <a href="privacy/privacy.html" class="privacy-link">Privacy Policy</a>
+        </section>
+        <section>
+            <a href="email.html" class="contact-link">Contact</a>
+        </section>
 
 
     </footer>
