--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
                         </div>
                     </a>
 
+                    <a href="games/fruit.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🍉</div>
+                        <h3>Fruit Ninja</h3>
+                        <p>Cut all the fruits and avoid bombs.</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
