--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         </div>
                     </a>
 
-                    <a href="games/fruit.html" class="game-card" data-category="arcade">
+                    <a href="games/fruitninja.html" class="game-card" data-category="arcade">
                         <div class="game-icon">🍉</div>
                         <h3>Fruit Ninja</h3>
                         <p>Cut all the fruits and avoid bombs.</p>
