--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
                         </div>
                     </a>
 
+                    <a href="games/mazerunner.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🌀</div>
+                        <h3>Maze Runner</h3>
+                        <p>A puzzle of paths and patience</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
