--- a/index.html
+++ b/index.html
@@ -468,6 +468,12 @@
             }
         });
     </script>
+    <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+    <script type="text/javascript">
+        aclib.runAutoTag({
+            zoneId: '0hp809h1sf',
+        });
+    </script>
 </body>
 
 </html>
