--- a/index.html
+++ b/index.html
@@ -241,7 +241,12 @@
                     </a>
 
                     <a href="games/turborace.html" class="game-card" data-category="arcade">
-                        <div class="game-icon">🏎️</div>
+                        <div class="game-header">
+                            <div class="game-icon">🏎️</div>
+                            <div class="platform-tags">
+                                <span class="platform-tag pc" title="Play on PC">💻</span>
+                            </div>
+                        </div>
                         <h3>Turbo Racer</h3>
                         <p>Avoid the oncoming cars and set a high score!</p>
                         <div class="game-categories">
