--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MGames - Mini Games Collection</title>
+    <title>playmgames - Mini Games Collection</title>
     <link rel="stylesheet" href="styles/index.css">
 
 </head>
@@ -13,7 +13,7 @@
     <header id="mainHeader">
         <div class="logo">
             <div class="logo-icon">🎮</div>
-            <h1>MGames</h1>
+            <h1>playmgames</h1>
         </div>
         <nav>
             <a href="index.html" class="nav active">Home</a>
@@ -26,7 +26,7 @@
     <main>
         <div class="stage">
             <section class="hero">
-                <h1>Welcome to MGames</h1>
+                <h1>Welcome to playmgames</h1>
                 <p>Discover a collection of fun and engaging mini games. Challenge yourself and have fun!</p>
                 <button class="btn" onclick="scrollToGames()">Explore Games</button>
             </section>
@@ -308,15 +308,15 @@
         <p>Made with ❤️ for gaming enthusiasts</p>
 
         <section id="about" class="about">
-            <h2>About GameHub</h2>
+            <h2>About playmgames</h2>
             <p>
-                MGames is a collection of fun, lightweight, and free-to-play browser games.
+                playmgames is a collection of fun, lightweight, and free-to-play browser games.
                 We built this platform to bring quick entertainment to everyone — no downloads, no ads overload,
                 just pure gaming fun! Whether you're here for classic board games or fast-paced arcade challenges,
-                GameHub has something for you.
+                playmgames has something for you.
             </p>
             <p>
-                Our goal is to continuously expand the collection and make GameHub the go-to destination
+                Our goal is to continuously expand the collection and make playmgames the go-to destination
                 for online mini games.
             </p>
         </section>
@@ -324,7 +324,7 @@
             <h2>Contact Us</h2>
             <p>Have feedback, game requests, or bug reports? Let us know!</p>
             <center>edineth506@gmail.com</center>
-            <p>© 2025 MGames. All rights reserved.</p>
+            <p>© 2025 playmgames. All rights reserved.</p>
 
             </form>
         </section>
