--- a/games/chess.html
+++ b/games/chess.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Chess — GameHub</title>
+    <title>Chess — playmgames</title>
     <link rel="stylesheet" href="../styles/chess.css" />
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <div class="logo-icon">🎮</div>
-            <h1>GameHub</h1>
+            <h1>playmgames</h1>
         </div>
         <nav>
             <a class="nav">Chess</a>
@@ -81,5 +81,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
     <script src="../scripts/chess.js"></script>
 </body>
+
 
 </html>
