--- a/games/rps.html
+++ b/games/rps.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors - GameHub</title>
+    <title>Rock Paper Scissors - playmgames</title>
     <link rel="stylesheet" href="../styles/rps.css">
 
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="logo">
             <div class="logo-icon">🎮</div>
-            <h1>GameHub</h1>
+            <h1>playmgames</h1>
         </div>
         <nav>
             <a href="../index.html" class="nav">Home</a>
@@ -205,5 +205,6 @@
         });
     </script>
 </body>
+
 
 </html>
