--- a/games/guessnumber.html
+++ b/games/guessnumber.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess the Number - GameHub</title>
+    <title>Guess the Number - playmgames</title>
     <link rel="stylesheet" href="../styles/guessnumber.css">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <div class="logo-icon">🎮</div>
-            <h1>GameHub</h1>
+            <h1>playmgames</h1>
         </div>
         <nav>
             <a href="../index.html" class="nav">Home</a>
@@ -196,5 +196,6 @@
         });
     </script>
 </body>
+
 
 </html>
