--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "GameHub",
-    "url": "https://ncoat48.github.io/gamehub",
+    "name": "playmgames",
+    "url": "https://playmgames.vercel.app/",
     "logo": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>"
   }
   </script>
