--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - mgames</title>
+  <title>Privacy Policy - playmgames</title>
   <link rel="stylesheet" href="privacy.css">
 </head>
 
@@ -12,14 +12,14 @@
   <header>
     <div class="logo">
       <div class="logo-icon">🎮</div>
-      <h1>mgames</h1>
+      <h1>playmgames</h1>
     </div>
   </header>
 
   <main>
     <h2>Privacy Policy</h2>
     <p>
-      At <strong>MGames</strong>, we respect your privacy and are committed to protecting it.
+      At <strong>playmgames</strong>, we respect your privacy and are committed to protecting it.
     </p>
 
     <h3>Information We Collect</h3>
@@ -28,10 +28,17 @@
       requiring sign-in or registration.
     </p>
 
-
     <h3>Cookies</h3>
     <p>
-      We dont use any cookies.
+      We don’t use any cookies.
+    </p>
+
+    <h3>Advertisements</h3>
+    <p>
+      This site may display third-party advertisements. <strong>playmgames is not responsible for the content, accuracy,
+        or
+        safety of any external ads or websites</strong> that may appear. We recommend reviewing the privacy policies of
+      those third-party providers.
     </p>
 
     <h3>Contact Us</h3>
@@ -39,7 +46,7 @@
       If you have questions about this policy, <a href="../email.html">contact</a> us.
     </p>
 
-    <p>Last updated:November 2025</p>
+    <p>Last updated: November 2025</p>
   </main>
 
   <footer>
